--- a/Experiment_2 - KNN Classifier/Ex2 - KNN_Using_Inbuilt_Functions.ipynb
+++ b/Experiment_2 - KNN Classifier/Ex2 - KNN_Using_Inbuilt_Functions.ipynb
@@ -1,77 +1,79 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "#Importing necessary libraries\n"
-      ],
       "metadata": {
         "id": "C20M4rBLosXv"
-      }
+      },
+      "source": [
+        "#Importing necessary libraries\n"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": 6,
       "metadata": {
         "id": "oVpduhL0gVZ6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'sklearn'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[6], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m StandardScaler\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mneighbors\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m KNeighborsClassifier\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn.metrics import f1_score, accuracy_score, confusion_matrix\n",
-        "import matplotlib.pyplot as plt\n"
+        "from sklearn.metrics import f1_score, accuracy_score, confusion_matrix\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Importing the dataset\n"
-      ],
       "metadata": {
         "id": "4uYlRto9o2zk"
-      }
+      },
+      "source": [
+        "#Importing the dataset\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "data = pd.read_csv('/content/diabetes.csv')\n",
-        "\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "_Se6r6rGg0fY"
       },
-      "execution_count": 127,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "data = pd.read_csv('/content/diabetes.csv')\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Eliminating the zeros in the dataset and replacing with mean value"
-      ],
       "metadata": {
         "id": "zgqHu8s3o768"
-      }
+      },
+      "source": [
+        "#Eliminating the zeros in the dataset and replacing with mean value"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "mVO54Xjphlc8"
+      },
+      "outputs": [],
       "source": [
         "zero_not_accepted = ['Glucose','BloodPressure','SkinThickness','BMI','Insulin']\n",
         "\n",
@@ -79,73 +81,77 @@
         "  data[column] = data[column].replace(0,np.NaN)\n",
         "  mean = int(data[column].mean(skipna=True))\n",
         "  data[column] = data[column].replace(np.NaN,mean)"
-      ],
-      "metadata": {
-        "id": "mVO54Xjphlc8"
-      },
-      "execution_count": 128,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Splitting the dataset into training and testing dataset"
-      ],
       "metadata": {
         "id": "wHpsaG_JpCVG"
-      }
+      },
+      "source": [
+        "#Splitting the dataset into training and testing dataset"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "k4dWSS7_hxiy"
+      },
+      "outputs": [],
       "source": [
         "x = data.iloc[:,0:-1]\n",
         "y = data.iloc[:, -1]\n",
         "\n",
         "x_train, x_test, y_train, y_test = train_test_split(x,y,random_state = 0, test_size = 0.2)"
-      ],
-      "metadata": {
-        "id": "k4dWSS7_hxiy"
-      },
-      "execution_count": 129,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Applying feature scaling to the training and testing dataset"
-      ],
       "metadata": {
         "id": "chHRCP_FpIy5"
-      }
+      },
+      "source": [
+        "#Applying feature scaling to the training and testing dataset"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "PP_MwaeZiMcc"
+      },
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'StandardScaler' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m scaler \u001b[38;5;241m=\u001b[39m \u001b[43mStandardScaler\u001b[49m()\n\u001b[0;32m      2\u001b[0m x_train \u001b[38;5;241m=\u001b[39m scaler\u001b[38;5;241m.\u001b[39mfit_transform(x_train)\n\u001b[0;32m      3\u001b[0m x_test \u001b[38;5;241m=\u001b[39m scaler\u001b[38;5;241m.\u001b[39mtransform(x_test)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'StandardScaler' is not defined"
+          ]
+        }
+      ],
       "source": [
         "scaler = StandardScaler()\n",
         "x_train = scaler.fit_transform(x_train)\n",
         "x_test = scaler.transform(x_test)"
-      ],
-      "metadata": {
-        "id": "PP_MwaeZiMcc"
-      },
-      "execution_count": 130,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Training the KNN Model based on 'Euclidean' metric measure"
-      ],
       "metadata": {
         "id": "gs7eXCe9pONE"
-      }
+      },
+      "source": [
+        "#Training the KNN Model based on 'Euclidean' metric measure"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "classifier = KNeighborsClassifier(n_neighbors =11, p=2, metric='euclidean')\n",
-        "classifier.fit(x_train,y_train)\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -154,58 +160,58 @@
         "id": "5YOmFvG3jajK",
         "outputId": "5c38d7f5-e542-4a58-b82c-14b47a6cd6e1"
       },
-      "execution_count": 131,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "KNeighborsClassifier(metric='euclidean', n_neighbors=11)"
-            ],
             "text/html": [
               "<style>#sk-container-id-11 {color: black;background-color: white;}#sk-container-id-11 pre{padding: 0;}#sk-container-id-11 div.sk-toggleable {background-color: white;}#sk-container-id-11 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-11 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-11 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-11 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-11 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-11 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-11 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-11 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-11 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-11 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-11 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-11 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-11 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-11 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-11 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-11 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-11 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-11 div.sk-item {position: relative;z-index: 1;}#sk-container-id-11 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-11 div.sk-item::before, #sk-container-id-11 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-11 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-11 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-11 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-11 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-11 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-11 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-11 div.sk-label-container {text-align: center;}#sk-container-id-11 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-11 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-11\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier(metric=&#x27;euclidean&#x27;, n_neighbors=11)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-11\" type=\"checkbox\" checked><label for=\"sk-estimator-id-11\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">KNeighborsClassifier</label><div class=\"sk-toggleable__content\"><pre>KNeighborsClassifier(metric=&#x27;euclidean&#x27;, n_neighbors=11)</pre></div></div></div></div></div>"
+            ],
+            "text/plain": [
+              "KNeighborsClassifier(metric='euclidean', n_neighbors=11)"
             ]
           },
+          "execution_count": 131,
           "metadata": {},
-          "execution_count": 131
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "classifier = KNeighborsClassifier(n_neighbors =11, p=2, metric='euclidean')\n",
+        "classifier.fit(x_train,y_train)\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Making Prediction using the trained model"
-      ],
       "metadata": {
         "id": "ZVcmzpZvpVxc"
-      }
+      },
+      "source": [
+        "#Making Prediction using the trained model"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "y_pred = classifier.predict(x_test)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "iXoj3c77kKqc"
       },
-      "execution_count": 132,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "y_pred = classifier.predict(x_test)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Evaluating the prediction results of the model"
-      ],
       "metadata": {
         "id": "olqL9fqOpaR_"
-      }
+      },
+      "source": [
+        "#Evaluating the prediction results of the model"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "cm = confusion_matrix(y_test,y_pred)\n",
-        "print(cm)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -213,23 +219,24 @@
         "id": "bOwrt7WMkSsy",
         "outputId": "9cf862a1-a62b-481c-e5fe-5952025a405c"
       },
-      "execution_count": 133,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[[94 13]\n",
             " [15 32]]\n"
           ]
         }
+      ],
+      "source": [
+        "cm = confusion_matrix(y_test,y_pred)\n",
+        "print(cm)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(accuracy_score(y_test,y_pred)*100)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -237,16 +244,41 @@
         "id": "pwGs4zATkoDu",
         "outputId": "6a3952d5-60e4-4cdb-fe41-42685a7b8ff6"
       },
-      "execution_count": 136,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "81.81818181818183\n"
           ]
         }
+      ],
+      "source": [
+        "print(accuracy_score(y_test,y_pred)*100)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.2"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
