--- a/Experiment_3 - SVM Classifier/SVM Classification Model.ipynb
+++ b/Experiment_3 - SVM Classifier/SVM Classification Model.ipynb
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('Social_Network_Ads.csv')\n",
+    "data = pd.read_csv('Customer_Car_Purchase.csv')\n",
     "\n",
     "x = data.iloc[:,:-1].values\n",
     "y = data.iloc[:,-1].values\n"
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -485,6 +485,8 @@
     "classifier_poly = SVC(kernel='poly',random_state=0)\n",
     "classifier_poly.fit(x_train,y_train)\n",
     "\n",
+    "\n",
+    "#The portion below is for Support Vector Regression\n",
     "from sklearn.svm import SVR\n",
     "regressor = SVR(kernel='rbf')\n",
     "regressor.fit(x_train,y_train)"
@@ -587,6 +589,8 @@
     "y_pred_rbf = classifier_rbf.predict(x_test)\n",
     "y_pred_sigmoid = classifier_sigmoid.predict(x_test)\n",
     "y_pred_poly = classifier_poly.predict(x_test)\n",
+    "\n",
+    "#The snippet below is for prediction based on Support Vector Regression\n",
     "y_pred_svr = regressor.predict(x_test)\n",
     "a =[]\n",
     "for i in range(len(y_pred_svr)):\n",
